database users import test

--- a/Jupiter/WebContent/index.html
+++ b/Jupiter/WebContent/index.html
@@ -69,15 +69,15 @@
     <ul>
       <li>
         <p><i class="fa fa-map-o fa-2x"></i></p>
-        <p>LaiOffer office, CA</p>
+        <p>100 North St, OH</p>
       </li>
       <li>
         <p><i class="fa fa-envelope-o fa-2x"></i></p>
-        <p>info@laioffer.com</p>
+        <p>info@zhang.9849@osu.edu</p>
       </li>
       <li>
         <p><i class="fa fa-phone fa-2x"></i></p>
-        <p>+1 800 123 456</p>
+        <p>+1 380 997 8411</p>
       </li>
     </ul>
   </footer>
